[package]
name = "tracing-benchmark-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "my_benchmark"
harness = false

[[bin]]
name = "drop-subscriber"