[package]
name = "tracing-benchmark-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
tracing-xray = { path = "../tracing-xray" }

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "my_benchmark"
harness = false

[[bin]]
name = "drop_subscriber"

[[bin]]
name = "xray_layer"